[gd_scene load_steps=8 format=2]

[ext_resource path="res://Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Goombah.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
<<<<<<< HEAD
[ext_resource path="res://Pleasant_Plains.ogg" type="AudioStream" id=7]
=======
[ext_resource path="res://BackgroundMusic.tscn" type="PackedScene" id=7]
>>>>>>> Ectes-stuff

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="Floor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.503105, 0, 0, 0 )

[node name="Walls" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2.05, 10, 0.5, 0 )

[node name="Walls2" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2.05, -10, 0.5, 0 )

[node name="Walls3" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 2, 0, 1, 0, -1, 0, -3.25841e-07, 0, 0.5, 10 )

[node name="Walls4" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 2, 0, 1, 0, -1, 0, -3.25841e-07, 0, 0.5, -10 )

[node name="Goombah" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 3, 2.2, 0 )
collision_mask = 3

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="BackgroundMusic" parent="." instance=ExtResource( 7 )]

<<<<<<< HEAD
[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 17.085
[connection signal="main_startBattle" from="." to="." method="_on_Main_main_startBattle"]
[connection signal="hit" from="Mario" to="." method="_on_Mario_hit"]
=======
[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00336504, 5, 9.07551 )
>>>>>>> Ectes-stuff
